# slicenii

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: common.rs  enums.rs  main.rs
