[package]
name = "slicenii"
version = "0.1.0"
authors = ["Liam Timms <timms5000@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A command line tool for slicing nifti files"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
ndarray = {version="0.15.6"}
nifti = {version="0.15.0", features = ["ndarray_volumes"]}
