[package]
name = "slicenii"
version = "0.2.0"
authors = ["Liam Timms <timms5000@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A command line tool for slicing nifti files"
readme = "README.md"
homepage = "https://github.com/liamtimms/slicenii"
keywords = ["medical imaging", "nifti", "slicing", "image", "command line"]
categories = ["science::neuroscience"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
clap = {version = "4.3.21", features = ["derive"]}
ndarray = {version="0.15.6"}
nalgebra = {version="0.31.2"}
nifti = {version="0.15.0", features = ["ndarray_volumes", "nalgebra_affine"]}
